# Pretty-Good-AI--AI-Engineer

./: .env.example  .gitignore  ARCHITECTURE.md  main.py  pyproject.toml  readme.MD
bug_reports/: scenario_01.md  scenario_02.md  scenario_03.md  scenario_04.md  scenario_05.md  scenario_06.md  scenario_07.md  scenario_08.md  scenario_09.md  scenario_10.md  scenario_11.md  scenario_12.md
transcripts/: 01_20260620T191829Z_v3_NdyjqH2tz-vDyfsxgOXg0slj18k-B-SdHmp2uqCpuU0tliIq9cNwnA.json  01_20260620T191829Z_v3_NdyjqH2tz-vDyfsxgOXg0slj18k-B-SdHmp2uqCpuU0tliIq9cNwnA.txt  01_20260620T213940Z_v3_vwkWf8jPG8QXRfjgdGVVvwBdfE-thC8-s1OqT4qwFLm2CoBvzBrX7A.json  01_20260620T213940Z_v3_vwkWf8jPG8QXRfjgdGVVvwBdfE-thC8-s1OqT4qwFLm2CoBvzBrX7A.txt  02_20260620T192903Z_v3_QzhWV-dS9nQAZGmpjdOa4ALwChmCrPOi8_tOUn8J6fAgNwjug6INfg.json  02_20260620T192903Z_v3_QzhWV-dS9nQAZGmpjdOa4ALwChmCrPOi8_tOUn8J6fAgNwjug6INfg.txt  03_20260620T200617Z_v3_F8nKziBJLimnM0VelV9XANde485kPQDvUT0JsMX5TIHT0eP-b3P7Jg.json  03_20260620T200617Z_v3_F8nKziBJLimnM0VelV9XANde485kPQDvUT0JsMX5TIHT0eP-b3P7Jg.txt  04_20260620T185930Z_v3_UwdisT7CYHjnk3Q9bHSM4MM5xcRgeUyAehTB-Uyj6BX2E0cdm-Je5A.json  04_20260620T185930Z_v3_UwdisT7CYHjnk3Q9bHSM4MM5xcRgeUyAehTB-Uyj6BX2E0cdm-Je5A.txt  05_20260620T193418Z_v3_z7aiWdo-m6KZw5QVFAxJ7O47EaBdUHZbPWDzsl4p0-nwJ2x8A8Oe8w.json  05_20260620T193418Z_v3_z7aiWdo-m6KZw5QVFAxJ7O47EaBdUHZbPWDzsl4p0-nwJ2x8A8Oe8w.txt  06_20260620T185208Z_v3_S6YZrVB3a4lW1gy1yyom9Og0GyXCmeJAyS4nLQMZaj8FgOn8vaouWw.json  06_20260620T185208Z_v3_S6YZrVB3a4lW1gy1yyom9Og0GyXCmeJAyS4nLQMZaj8FgOn8vaouWw.txt  (+12 more)
voice_bot/: __init__.py  (+5 more)
(+10 files in other folders)
